objects/SCP_Certa_GC__Capability__c.object
<CustomObject>
    <fields>
        <fullName>SCP_Certa_GC__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>GAP_Capabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__CapabilityArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CapabilityArea</label>
        <referenceTo>SCP_Certa_GC__CapabilityArea__c</referenceTo>
        <relationshipName>SCP_Capabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__value__c</fullName>
        <label>value</label>
        <type>TextArea</type>
    </fields>
    <label>SCP Capability</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Nombre de SCP Capability</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SCP Capabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>